dfir_rs/tests/compile-fail/surface_forwardref_self2_indirect.rs
use dfir_rs::dfir_syntax;

fn main() {
    let mut df = dfir_syntax! {
        g = f -> map(|x: usize| x) -> f;
        f = g;
    };
    df.run_available();
}
